[package]
name = "bitinfo"
version = "0.1.0"
authors = ["Kerry Scharfglass <ancillaryAmalgamation@gmail.com>"]
edition = "2018"
description = "A commandline tool to make working with registers easier."
readme = "../README.md"
repository = "https://github.com/borgel/bitinfo"
homepage = "https://github.com/borgel/bitinfo"
license = "MIT"
categories = ["command-line-utilities", "development-tools", "embedded"]
keywords = ["register", "cli", "decode"]

[badges]
circle-ci = { repository = "https://github.com/borgel/bitinfo", branch = "master" }

[dependencies]
clap = "2.33.0"
parse_int = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bitvec = "0.17.4"
log = "0.4.11"
env_logger = "0.7.1"
prettytable-rs = "^0.8"
glob = "0.3.0"
